fix: remove duplicated def of ClustersInternalService
