# api/v1/cluster_manager_server_grpc.pb.go
@@ -207,90 +207,3 @@ var ClustersService_ServiceDesc = grpc.ServiceDesc{
 	Streams:  []grpc.StreamDesc{},
 	Metadata: "api/v1/cluster_manager_server.proto",
 }
-
-// ClustersInternalServiceClient is the client API for ClustersInternalService service.
-//
-// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
-type ClustersInternalServiceClient interface {
-	ListInternalClusters(ctx context.Context, in *ListInternalClustersRequest, opts ...grpc.CallOption) (*ListInternalClustersResponse, error)
-}
-
-type clustersInternalServiceClient struct {
-	cc grpc.ClientConnInterface
-}
-
-func NewClustersInternalServiceClient(cc grpc.ClientConnInterface) ClustersInternalServiceClient {
-	return &clustersInternalServiceClient{cc}
-}
-
-func (c *clustersInternalServiceClient) ListInternalClusters(ctx context.Context, in *ListInternalClustersRequest, opts ...grpc.CallOption) (*ListInternalClustersResponse, error) {
-	out := new(ListInternalClustersResponse)
-	err := c.cc.Invoke(ctx, "/llmariner.clusters.server.v1.ClustersInternalService/ListInternalClusters", in, out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-// ClustersInternalServiceServer is the server API for ClustersInternalService service.
-// All implementations must embed UnimplementedClustersInternalServiceServer
-// for forward compatibility
-type ClustersInternalServiceServer interface {
-	ListInternalClusters(context.Context, *ListInternalClustersRequest) (*ListInternalClustersResponse, error)
-	mustEmbedUnimplementedClustersInternalServiceServer()
-}
-
-// UnimplementedClustersInternalServiceServer must be embedded to have forward compatible implementations.
-type UnimplementedClustersInternalServiceServer struct {
-}
-
-func (UnimplementedClustersInternalServiceServer) ListInternalClusters(context.Context, *ListInternalClustersRequest) (*ListInternalClustersResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method ListInternalClusters not implemented")
-}
-func (UnimplementedClustersInternalServiceServer) mustEmbedUnimplementedClustersInternalServiceServer() {
-}
-
-// UnsafeClustersInternalServiceServer may be embedded to opt out of forward compatibility for this service.
-// Use of this interface is not recommended, as added methods to ClustersInternalServiceServer will
-// result in compilation errors.
-type UnsafeClustersInternalServiceServer interface {
-	mustEmbedUnimplementedClustersInternalServiceServer()
-}
-
-func RegisterClustersInternalServiceServer(s grpc.ServiceRegistrar, srv ClustersInternalServiceServer) {
-	s.RegisterService(&ClustersInternalService_ServiceDesc, srv)
-}
-
-func _ClustersInternalService_ListInternalClusters_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(ListInternalClustersRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(ClustersInternalServiceServer).ListInternalClusters(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/llmariner.clusters.server.v1.ClustersInternalService/ListInternalClusters",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(ClustersInternalServiceServer).ListInternalClusters(ctx, req.(*ListInternalClustersRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-// ClustersInternalService_ServiceDesc is the grpc.ServiceDesc for ClustersInternalService service.
-// It's only intended for direct use with grpc.RegisterService,
-// and not to be introspected or modified (even as a copy)
-var ClustersInternalService_ServiceDesc = grpc.ServiceDesc{
-	ServiceName: "llmariner.clusters.server.v1.ClustersInternalService",
-	HandlerType: (*ClustersInternalServiceServer)(nil),
-	Methods: []grpc.MethodDesc{
-		{
-			MethodName: "ListInternalClusters",
-			Handler:    _ClustersInternalService_ListInternalClusters_Handler,
-		},
-	},
-	Streams:  []grpc.StreamDesc{},
-	Metadata: "api/v1/cluster_manager_server.proto",
-}
