# api/v1/cluster_manager_server_internal.pb.go
@@ -1,0 +1,299 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.34.1
+// 	protoc        (unknown)
+// source: api/v1/cluster_manager_server_internal.proto
+
+package v1
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type InternalCluster struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Cluster  *Cluster `protobuf:"bytes,1,opt,name=cluster,proto3" json:"cluster,omitempty"`
+	TenantId string   `protobuf:"bytes,2,opt,name=tenant_id,json=tenantId,proto3" json:"tenant_id,omitempty"`
+}
+
+func (x *InternalCluster) Reset() {
+	*x = InternalCluster{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_v1_cluster_manager_server_internal_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *InternalCluster) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*InternalCluster) ProtoMessage() {}
+
+func (x *InternalCluster) ProtoReflect() protoreflect.Message {
+	mi := &file_api_v1_cluster_manager_server_internal_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use InternalCluster.ProtoReflect.Descriptor instead.
+func (*InternalCluster) Descriptor() ([]byte, []int) {
+	return file_api_v1_cluster_manager_server_internal_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *InternalCluster) GetCluster() *Cluster {
+	if x != nil {
+		return x.Cluster
+	}
+	return nil
+}
+
+func (x *InternalCluster) GetTenantId() string {
+	if x != nil {
+		return x.TenantId
+	}
+	return ""
+}
+
+type ListInternalClustersRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *ListInternalClustersRequest) Reset() {
+	*x = ListInternalClustersRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_v1_cluster_manager_server_internal_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ListInternalClustersRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ListInternalClustersRequest) ProtoMessage() {}
+
+func (x *ListInternalClustersRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_v1_cluster_manager_server_internal_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ListInternalClustersRequest.ProtoReflect.Descriptor instead.
+func (*ListInternalClustersRequest) Descriptor() ([]byte, []int) {
+	return file_api_v1_cluster_manager_server_internal_proto_rawDescGZIP(), []int{1}
+}
+
+type ListInternalClustersResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Clusters []*InternalCluster `protobuf:"bytes,1,rep,name=clusters,proto3" json:"clusters,omitempty"`
+}
+
+func (x *ListInternalClustersResponse) Reset() {
+	*x = ListInternalClustersResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_v1_cluster_manager_server_internal_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ListInternalClustersResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ListInternalClustersResponse) ProtoMessage() {}
+
+func (x *ListInternalClustersResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_api_v1_cluster_manager_server_internal_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ListInternalClustersResponse.ProtoReflect.Descriptor instead.
+func (*ListInternalClustersResponse) Descriptor() ([]byte, []int) {
+	return file_api_v1_cluster_manager_server_internal_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *ListInternalClustersResponse) GetClusters() []*InternalCluster {
+	if x != nil {
+		return x.Clusters
+	}
+	return nil
+}
+
+var File_api_v1_cluster_manager_server_internal_proto protoreflect.FileDescriptor
+
+var file_api_v1_cluster_manager_server_internal_proto_rawDesc = []byte{
+	0x0a, 0x2c, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72,
+	0x5f, 0x6d, 0x61, 0x6e, 0x61, 0x67, 0x65, 0x72, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x5f,
+	0x69, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x1c,
+	0x6c, 0x6c, 0x6d, 0x61, 0x72, 0x69, 0x6e, 0x65, 0x72, 0x2e, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65,
+	0x72, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x1a, 0x23, 0x61, 0x70,
+	0x69, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x5f, 0x6d, 0x61, 0x6e,
+	0x61, 0x67, 0x65, 0x72, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x22, 0x6f, 0x0a, 0x0f, 0x49, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x43, 0x6c, 0x75,
+	0x73, 0x74, 0x65, 0x72, 0x12, 0x3f, 0x0a, 0x07, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x18,
+	0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x25, 0x2e, 0x6c, 0x6c, 0x6d, 0x61, 0x72, 0x69, 0x6e, 0x65,
+	0x72, 0x2e, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65,
+	0x72, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x52, 0x07, 0x63, 0x6c,
+	0x75, 0x73, 0x74, 0x65, 0x72, 0x12, 0x1b, 0x0a, 0x09, 0x74, 0x65, 0x6e, 0x61, 0x6e, 0x74, 0x5f,
+	0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x74, 0x65, 0x6e, 0x61, 0x6e, 0x74,
+	0x49, 0x64, 0x22, 0x1d, 0x0a, 0x1b, 0x4c, 0x69, 0x73, 0x74, 0x49, 0x6e, 0x74, 0x65, 0x72, 0x6e,
+	0x61, 0x6c, 0x43, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x22, 0x69, 0x0a, 0x1c, 0x4c, 0x69, 0x73, 0x74, 0x49, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61,
+	0x6c, 0x43, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
+	0x65, 0x12, 0x49, 0x0a, 0x08, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x18, 0x01, 0x20,
+	0x03, 0x28, 0x0b, 0x32, 0x2d, 0x2e, 0x6c, 0x6c, 0x6d, 0x61, 0x72, 0x69, 0x6e, 0x65, 0x72, 0x2e,
+	0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e,
+	0x76, 0x31, 0x2e, 0x49, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x43, 0x6c, 0x75, 0x73, 0x74,
+	0x65, 0x72, 0x52, 0x08, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x32, 0xab, 0x01, 0x0a,
+	0x17, 0x43, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x49, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61,
+	0x6c, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x8f, 0x01, 0x0a, 0x14, 0x4c, 0x69, 0x73,
+	0x74, 0x49, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x43, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72,
+	0x73, 0x12, 0x39, 0x2e, 0x6c, 0x6c, 0x6d, 0x61, 0x72, 0x69, 0x6e, 0x65, 0x72, 0x2e, 0x63, 0x6c,
+	0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31,
+	0x2e, 0x4c, 0x69, 0x73, 0x74, 0x49, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x43, 0x6c, 0x75,
+	0x73, 0x74, 0x65, 0x72, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x3a, 0x2e, 0x6c,
+	0x6c, 0x6d, 0x61, 0x72, 0x69, 0x6e, 0x65, 0x72, 0x2e, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72,
+	0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74,
+	0x49, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x43, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x42, 0x2d, 0x5a, 0x2b, 0x67, 0x69,
+	0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6c, 0x6c, 0x6d, 0x61, 0x72, 0x69, 0x6e,
+	0x65, 0x72, 0x2f, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x2d, 0x6d, 0x61, 0x6e, 0x61, 0x67,
+	0x65, 0x72, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x33,
+}
+
+var (
+	file_api_v1_cluster_manager_server_internal_proto_rawDescOnce sync.Once
+	file_api_v1_cluster_manager_server_internal_proto_rawDescData = file_api_v1_cluster_manager_server_internal_proto_rawDesc
+)
+
+func file_api_v1_cluster_manager_server_internal_proto_rawDescGZIP() []byte {
+	file_api_v1_cluster_manager_server_internal_proto_rawDescOnce.Do(func() {
+		file_api_v1_cluster_manager_server_internal_proto_rawDescData = protoimpl.X.CompressGZIP(file_api_v1_cluster_manager_server_internal_proto_rawDescData)
+	})
+	return file_api_v1_cluster_manager_server_internal_proto_rawDescData
+}
+
+var file_api_v1_cluster_manager_server_internal_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_api_v1_cluster_manager_server_internal_proto_goTypes = []interface{}{
+	(*InternalCluster)(nil),              // 0: llmariner.clusters.server.v1.InternalCluster
+	(*ListInternalClustersRequest)(nil),  // 1: llmariner.clusters.server.v1.ListInternalClustersRequest
+	(*ListInternalClustersResponse)(nil), // 2: llmariner.clusters.server.v1.ListInternalClustersResponse
+	(*Cluster)(nil),                      // 3: llmariner.clusters.server.v1.Cluster
+}
+var file_api_v1_cluster_manager_server_internal_proto_depIdxs = []int32{
+	3, // 0: llmariner.clusters.server.v1.InternalCluster.cluster:type_name -> llmariner.clusters.server.v1.Cluster
+	0, // 1: llmariner.clusters.server.v1.ListInternalClustersResponse.clusters:type_name -> llmariner.clusters.server.v1.InternalCluster
+	1, // 2: llmariner.clusters.server.v1.ClustersInternalService.ListInternalClusters:input_type -> llmariner.clusters.server.v1.ListInternalClustersRequest
+	2, // 3: llmariner.clusters.server.v1.ClustersInternalService.ListInternalClusters:output_type -> llmariner.clusters.server.v1.ListInternalClustersResponse
+	3, // [3:4] is the sub-list for method output_type
+	2, // [2:3] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
+}
+
+func init() { file_api_v1_cluster_manager_server_internal_proto_init() }
+func file_api_v1_cluster_manager_server_internal_proto_init() {
+	if File_api_v1_cluster_manager_server_internal_proto != nil {
+		return
+	}
+	file_api_v1_cluster_manager_server_proto_init()
+	if !protoimpl.UnsafeEnabled {
+		file_api_v1_cluster_manager_server_internal_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*InternalCluster); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_v1_cluster_manager_server_internal_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*ListInternalClustersRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_v1_cluster_manager_server_internal_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*ListInternalClustersResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_api_v1_cluster_manager_server_internal_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   3,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_v1_cluster_manager_server_internal_proto_goTypes,
+		DependencyIndexes: file_api_v1_cluster_manager_server_internal_proto_depIdxs,
+		MessageInfos:      file_api_v1_cluster_manager_server_internal_proto_msgTypes,
+	}.Build()
+	File_api_v1_cluster_manager_server_internal_proto = out.File
+	file_api_v1_cluster_manager_server_internal_proto_rawDesc = nil
+	file_api_v1_cluster_manager_server_internal_proto_goTypes = nil
+	file_api_v1_cluster_manager_server_internal_proto_depIdxs = nil
+}
